# whatsapp-chat-analyzer

./: .gitignore  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
deploy/: nginx.conf  oracle-setup.sh
deploy/systemd/: whatsapp-api.service
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatInput.jsx  Filters.jsx  Results.jsx
samples/: sample_chat.txt
src/whatsapp_analyzer/: __init__.py
src/whatsapp_analyzer/analyzer/: __init__.py  chunker.py  core.py  filters.py
src/whatsapp_analyzer/interfaces/: cli.py  web.py
src/whatsapp_analyzer/llm/: __init__.py  base.py  ollama_client.py  prompts.py
src/whatsapp_analyzer/models/: __init__.py  analysis.py  message.py
src/whatsapp_analyzer/parsers/: __init__.py  base.py  docx_parser.py  image_parser.py  pdf_parser.py  text_parser.py
tests/: conftest.py  test_analyzer.py  test_chunker.py  test_text_parser.py
